syntax = "proto3";

package blacklist;

option go_package = "internal/delivery/grpcapi/blacklistpb";

import "blacklist_message.proto";

message AddIPRequest {
  IPNetwork ip_network = 1;
}

message AddIPResponse {
  bool ok = 1;
}

message RemoveIPRequest {
  IPNetwork ip_network = 1;
}

message RemoveIPResponse {
  bool ok = 1;
}

message GetIPListRequest {

}

message GetIPListResponse {
  repeated IPNetwork ip_network = 1;
}

service BlackListService {
  rpc AddIp (AddIPRequest) returns (AddIPResponse);
  rpc RemoveIp (RemoveIPRequest) returns (RemoveIPResponse);
  rpc GetIpList (GetIPListRequest) returns (stream GetIPListResponse);
}